--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.container{
+    max-width: 1140px;
+}
+
+h2{
+    margin-top:20px;
+}
