--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link text-secondary" routerLink="/resume" routerLinkActive="text-dark">Resume</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-secondary" routerLink="/contact" routerLinkActive="text-dark">Contacto</a>
+            <a class="nav-link text-secondary" routerLink="/contact" routerLinkActive="text-dark">Contact</a>
         </li>
     </ul>
 </div>
