--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,13 @@
         <!--About me-->
         <div class="col-lg shadow border n=1">
             <div class="text-center">
-                <h2>Sobre mí</h2>
-                <img src="../../assets/foto.jpg" alt="profile picture" width="250" class="rounded-circle">
+                <h2>About me</h2>
+                <img src="../../assets/foto.jpg" alt="profile picture"
+                    width="250" class="rounded-circle">
 
                 <p>
-                    Desarrolladora Web con un año de experiencia profesional en el sector IT, he colaborado con diversos equipos, demostrando mi compromiso, proactividad, capacidad de resolución de problemas, habilidades comunicativas y empatía. Mi entusiasmo por la formación y el desarrollo personal se reflejan en mi continua búsqueda de crecimiento al ritmo de los avances tecnológicos.
-                    Estoy encantada de contribuir en proyectos innovadores y seguir evolucionando en el emocionante campo del desarrollo web. Lista para aportar y crecer junto a un equipo comprometido con la vida. 🚀   
+                    Web Developer with one year of professional experience in the IT sector, I have collaborated with various teams, demonstrating my commitment, proactivity, problem-solving ability, communication skills and empathy. My enthusiasm for training and personal development is reflected in my continuous search for growth at the pace of technological advances.
+                    I am delighted to contribute to innovative projects and continue to evolve in the exciting field of web development. Ready to contribute and grow with a team committed to life. 🚀
                 </p>
             </div>
 
@@ -16,9 +17,18 @@
         <!--Featured Projects-->
         <div class="col-lg shadow border n=1">
             <div class="text-center">
-                <h2>Proyectos Destacados</h2>
+                <h2>Featured Project</h2>
                 <h4>{{featuredProject.name}}</h4>
             </div>
+            <carousel>
+                <div *ngFor="let picture of featuredProject.pictures">
+                    <slide><img src={{picture}} alt="slide"
+                            style="display: block; width: 90%;"></slide>
+                </div>
+            </carousel>
+
+            <p class="mt-2" style="text-align: center;">{{featuredProject.summary}} </p>
+            <p style="text-align: center;">Visit the Portfolio section to learn more!</p>
         </div>
 
     </div>
