--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,14 @@
 h2{
     margin-top:20px;
 }
+
+.tag{
+    padding: 0 20px;
+    height: 30px;
+    width: fit-content;
+    font-size: 14px;
+    line-height: 30px;
+    border-radius: 25px;
+    background-color: blue;
+    color:white
+}
