--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,94 @@
 <div class="container text-center">
-    <button (click)="DownloadFile()" class="btn btn-primary mb-5 shadow border">Download PDF Resume</button>
-</div>
+    <button (click)="DownloadFile()"
+        class="btn btn-primary mb-5 shadow border">Download PDF Resume</button>
+<div class="pb-2">
 
+
+    <accordion [isAnimated]="true" class="shadow">
+        <accordion-group heading="Work Experience">
+            <div style="text-align:left;">
+                <h2 class mb-0>Full Stack Web Developer</h2>
+                <h3 class="text-primary">Factoría F5</h3>
+                <p>Experience in collaboration in development teams through the
+                    application of agile methodologies. Featured skills include
+                    creating Landing Pages and E-commerce platforms using HTML,
+                    CSS, JavaScript and React, implementing key functionalities
+                    such as the shopping cart. Consolidated experience in
+                    integrating and consuming APIs to optimize project
+                    performance and functionality.</p>
+            </div>
+            <hr>
+            <div style="text-align:left;">
+                <h2 class mb-0>Store Manager</h2>
+                <h3 class="text-primary">Gymage Lounge Resort</h3>
+                <p>Effective leadership in team management, enhancing efficiency
+                    and collaboration.
+                    Experience in marketing strategies to increase customer
+                    loyalty and sales.
+                    Skill in negotiation, personalized attention to clients and
+                    suppliers, strengthening key relationships for the
+                    business.</p>
+            </div>
+
+        </accordion-group>
+
+        <accordion-group heading="Education">
+            <div style="text-align:left;">
+                <h2 class mb-0>Well Full-Stack and Cybersecurity Development
+                    Bootcamp (1100 hours)</h2>
+                <h3 class="text-primary">Factoría F5</h3>
+                <p>Comprehensive bootcamp from initial level, addressing
+                    programming languages, UX standards and personal projects.
+                    Highlights Agile methodologies, Atomic Design, prototyping
+                    with Figma, HTML5/CSS3 layout (Bootstrap, LESS). Experience
+                    in functional programming, CRUD with JavaScript, frameworks
+                    such as React/VUE, Express, Java for database models.
+                    Emphasis on hexagonal projects and architecture.
+                    Competencies include responsive front-end design, Agile
+                    tools, version control, good development practices and time
+                    management.</p>
+            </div>
+            <hr>
+            <div style="text-align:left;">
+                <h2 class mb-0>Certified Ethical Hacker</h2>
+                <h3 class="text-primary">Ec-Council</h3>
+            </div>
+            <hr>
+            <div style="text-align:left;">
+                <h2 class mb-0>FP ASIR Technical Superior</h2>
+                <h3 class="text-primary">Teide-Linkia</h3>
+            </div>
+            
+        </accordion-group>
+
+        <accordion-group heading="Certificate">
+            <div style="text-align:left;">
+                <h2 class mb-0>Green Digital Skills</h2>
+                <h3 class="text-primary">Inco</h3>
+            </div>
+
+
+        </accordion-group>
+
+        <accordion-group heading="Skills">
+            <div class="row" style="text-align:left;">
+                <div class="col">
+                   <h3>Programming Languages:</h3>
+                   <ul>
+                    <li> JavaScript</li>
+                    <li>Html</li>
+                    <li>React</li>
+                    <li>Angular</li>
+                    <li>TypeScript</li>
+                    <li>CSS</li>
+                   </ul>
+                </div>
+                
+            </div>
+
+        </accordion-group>
+
+    </accordion>
+
+</div>
+</div>
