--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,19 @@
-<div class="jumbotron">
+<div class="jumbotron" style="position:relative">
     <div class="text-center">
         <h1 class="display=4">Andrea García</h1>
         <h3>Jr. Full-Stack Developer</h3>
+    </div>
+
+    <div style="position:absolute; bottom: 5px; right: 10px;">
+        <a href="https://www.linkedin.com/in/andrea-garc%C3%ADa-cede%C3%B1o-5467a15b/" target="_blank" class="">
+            <img src="../../assets/linkedin.jpeg" width="24" height="24" class="rounded-circle me-2">
+            
+        </a>
+
+        <a href="https://github.com/angarce25" target="_blank" class="">
+            <img src="../../assets/Git.jpeg" width="24" height="24" class="rounded-circle me-2">
+           
+        </a>
+
     </div>
 </div>
