update mail y slide

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center border mb-5 shadow rounded">
         <h1>Contact</h1>
-        <p>I can be reached at the following email: <b>andreagarciacedeno&#64;gmail.com</b></p>
+        <p>I can be reached at the following email: <a href="mailto:andreagarciacedeno@gmail.com"> <b>andreagarciacedeno&#64;gmail.com</b></a></p>
         <p>Feel free to connect with me on many of the following plataforms:</p>
     </div>
 
