--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,9 @@
     padding: 2rem;
     background-color: #e6ced6;
 }
+
+.icon-link .fab {
+    color: black; /* Cambia el color a negro */
+}
+
+  
