--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <ul class="nav justify-content-center">
         <li class="nav-item">
-            <a class="nav-link text-secondary" routerLink="/home" routerLinkActive="text-dark">Home</a>
+            <a class="nav-link text-secondary" routerLink="/home" routerLinkActive="text-dark" >Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-secondary"routerLink="/portfolio" routerLinkActive="text-dark">Portfolio</a>
@@ -13,6 +13,9 @@
         <li class="nav-item">
             <a class="nav-link text-secondary" routerLink="/contact" routerLinkActive="text-dark">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-secondary" routerLink="/blog" routerLinkActive="text-dark">Blog</a>
+      </li>
     </ul>
 </div>
 </nav>
