--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron" style="position:relative">
     <div class="text-center">
         <h1 class="display-4">Andrea García</h1>
-        <h3>Full-Stack Developer & Cybersecurity</h3>
+        <h3>Full-Stack Developer</h3>
     </div>
 
     <div style="position:absolute; bottom: 5px; right: 10px;">
