--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <h3>Full-Stack Developer</h3>
     </div>
 
-    <div style="position:absolute; bottom: 5px; right: 10px;">
+    <!-- <div style="position:absolute; bottom: 5px; right: 35px;">
         <a href="https://www.linkedin.com/in/andrea-garc%C3%ADa-cede%C3%B1o-5467a15b/" target="_blank" class="icon-link" style="text-decoration: none;">
             <i class="fab fa-linkedin fa-2x rounded-circle me-2"></i>
         </a>
@@ -12,7 +12,7 @@
         <a href="https://github.com/angarce25" target="_blank" class="icon-link" style="text-decoration: none;">
             <i class="fab fa-github fa-2x rounded-circle flex-shrink-0 me-5"></i>
         </a>
-    </div>
+    </div> -->
     
 </div>
 
