frontend_master_added new teams project

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                     width="250" class="rounded-circle">
 
                 <p>
-                    Web Developer with one year of professional experience in
+                    Web Developer with professional experience in
                     the IT sector, I have collaborated with various teams,
                     demonstrating my commitment, proactivity, problem-solving
                     ability, communication skills and empathy. My enthusiasm for
