--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -34,13 +34,13 @@
 
         <accordion-group heading="Education">
             <div style="text-align:left;">
-                <h2 class mb-0>Well Full-Stack and Cybersecurity Development
+                <h2 class mb-0>Full-Stack and Cybersecurity Development
                     Bootcamp (1100 hours)</h2>
                 <h3 class="text-primary">Factoría F5</h3>
                 <p>Comprehensive bootcamp from initial level, addressing
                     programming languages, UX standards and personal projects.
                     Highlights Agile methodologies, Atomic Design, prototyping
-                    with Figma, HTML5/CSS3 layout (Bootstrap, LESS). Experience
+                    with Figma, HTML5/CSS3 layout (Bootstrap, LESS), React, Angular. Experience
                     in functional programming, CRUD with JavaScript, frameworks
                     such as React/VUE, Express, Java for database models.
                     Emphasis on hexagonal projects and architecture.
@@ -49,14 +49,14 @@
                     management.</p>
             </div>
             <hr>
-            <div style="text-align:left;">
-                <h2 class mb-0>Certified Ethical Hacker</h2>
-                <h3 class="text-primary">Ec-Council</h3>
-            </div>
             <hr>
             <div style="text-align:left;">
                 <h2 class mb-0>FP ASIR Technical Superior</h2>
                 <h3 class="text-primary">Teide-Linkia</h3>
+            </div>
+            <div style="text-align:left;">
+                <h2 class mb-0>Bachelor's degree in Biology</h2>
+                <h3 class="text-primary">University Autonoma of Madrid</h3>
             </div>
             
         </accordion-group>
@@ -75,12 +75,15 @@
                 <div class="col">
                    <h3>Programming Languages:</h3>
                    <ul>
-                    <li> JavaScript</li>
+                    <li>JavaScript</li>
                     <li>Html</li>
                     <li>React</li>
                     <li>Angular</li>
                     <li>TypeScript</li>
                     <li>CSS</li>
+                    <li>Tailwind</li>
+                    <li>NodeJS</li>
+
                    </ul>
                 </div>
                 
